# fast_io

./: CMakeLists.txt
include/fast_io_core_impl/: to.h
tests/0004.floating/: rounding.cc
tests/0006.output_device/: simplest.cc
tests/0021.binary_serialization/: str_get_all.cc
